syntax = "proto3";

package io.restorecommerce.ostorage;

import "io/restorecommerce/filter.proto";
import "google/protobuf/any.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/attribute.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/options.proto";

service Service {
  option (io.restorecommerce.options.service_name) = "object";

  rpc Get (GetRequest) returns (stream ObjectResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Put (stream Object) returns (PutResponse);
  rpc Delete (DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc List (ListRequest) returns (ListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Copy (CopyRequestList) returns (CopyResponseList);
  rpc Move (MoveRequestList) returns (MoveResponseList);
}

message CopyRequestList {
  repeated CopyRequestItem items = 1;
  io.restorecommerce.auth.Subject subject = 2;
}

message CopyResponseList {
  repeated copyResponsePayloadWithStatus response = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}

message copyResponsePayloadWithStatus {
  CopyResponseItem payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message CopyRequestItem {
  string bucket = 1;
  string copySource = 2;
  string key = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional Options options = 5;
}

message CopyResponseItem {
  string bucket = 1;
  string copySource = 2;
  string key = 3;
  io.restorecommerce.meta.Meta meta = 4;
  Options options = 5;
}

message Options {
  optional string encoding = 1;
  optional string content_type = 2;
  optional string content_language = 3;
  optional string content_disposition = 4;
  optional int32 length = 5;
  optional string version = 6;
  optional string md5 = 7;
  repeated io.restorecommerce.attribute.Attribute tags = 8;
  optional google.protobuf.Any data = 9; // optional meta data ex: from and to dates
}

message Object {
  string key = 1;
  string bucket = 2;
  optional bytes object = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional string url = 5;
  optional Options options = 6;
  io.restorecommerce.auth.Subject subject = 7;
}

message ObjectResponse {
  ObjectResponsePayloadWithStatus response = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}

message ObjectResponsePayloadWithStatus {
  ObjectResponsePayload payload = 1;
  io.restorecommerce.status.Status status = 3;
}

message ObjectResponsePayload {
  string key = 1;
  string bucket = 2;
  bytes object = 3;
  io.restorecommerce.meta.Meta meta = 4;
  string url = 5;
  Options options = 6;
}

message GetRequest {
  string key = 1;
  string bucket = 2;
  optional bool download = 3;
  io.restorecommerce.auth.Subject subject = 4;
}

message ListResponse {
  repeated ObjectsDataWithPayloadStatus response = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}

message ObjectsDataWithPayloadStatus {
 ObjectData payload = 1;
 io.restorecommerce.status.Status status = 2;
}

message ObjectData {
  string object_name = 1;
  string url = 2;
  io.restorecommerce.meta.Meta meta = 3;
}

message DeleteRequest {
  string key = 1;
  string bucket = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message PutResponse {
  PutResponseWithPayloadStatus response = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}

message PutResponseWithPayloadStatus {
  Response payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Response {
  string url = 1;
  string bucket = 2 ;
  string key = 3;
  io.restorecommerce.meta.Meta meta = 4;
  repeated io.restorecommerce.attribute.Attribute tags = 5;
  int32 length = 6; // file size of uploaded object
}

message ListRequest {
  string bucket = 1;
  optional io.restorecommerce.filter.FilterOp filters = 2; /// Filter based on fieldName|operation, value|list
  io.restorecommerce.auth.Subject subject = 3;
  optional int32 max_keys = 4;
  optional string prefix = 5;
}

// OstorageMessage is used for emitting
// objectUploaded and objectDownloaded events
message OstorageMessage {
  optional string key = 1;
  optional string bucket = 2;
  optional google.protobuf.Any metadata = 3;
  optional io.restorecommerce.auth.Subject subject = 4;
}

message MoveRequestList {
  repeated MoveRequestItem items = 1;
  io.restorecommerce.auth.Subject subject = 2;
}

message MoveRequestItem {
  optional string bucket = 1; // destination bucket name
  optional string sourceObject = 2; // source object with bucket name
  optional string key = 3; // destination key name
  optional io.restorecommerce.meta.Meta meta = 4;
  optional Options options = 5;
}

message MoveResponseList {
  repeated MoveResponsePayloadWithStatus response = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}

message MoveResponsePayloadWithStatus {
  MoveResponseItem payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message MoveResponseItem {
  string bucket = 1;
  string sourceObject = 2;
  string key = 3;
  io.restorecommerce.meta.Meta meta = 4;
  Options options = 5;
}
